# send-telegram-cli

./: README.md  pyproject.toml
send_telegram_cli/: app.py  cli.py
tests/: test_send_telegram_cli.py
