[project]
name = "send-telegram-cli"
version = "0.0.1"
description = "Send Telegram Messages and Other files "
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/sukhbinder/send-telegram-cli"
Changelog = "https://github.com/sukhbinder/send-telegram-cli/releases"
Issues = "https://github.com/sukhbinder/send-telegram-cli/issues"
CI = "https://github.com/sukhbinder/send-telegram-cli/actions"

[project.scripts]
sendtele = "send_telegram_cli.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
